# basl

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/: FUNDING.yml
bassil_web/: package-lock.json  package.json
bassil_web/src/routes/: +page.svelte
input/: main.basl  secondary.basl
output/: output.json
src/: argparse.hpp  cursor.cpp  cursor.hpp  errorhandler.cpp  errorhandler.hpp  file.cpp  file.hpp  indicators.hpp  levenshtein.cpp  levenshtein.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  runargs.cpp  runargs.hpp  spinner.cpp  spinner.hpp  tokens.hpp
